--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Main Style -->
     <link rel="stylesheet" href="./src/styles/main.css">
+    <!-- FavIcon -->
+     <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="Yu-Gi-Oh">
     <title>Yu-Gi-Oh Jo-ken-po Edition</title>
 </head>
 <body>
+    <audio id="bgm" autoplay loop>
+        <source src="./src/assets/audios/egyptian_duel.mp3" type="audio/mp3">
+    </audio>
     <div class="bg-video">
         <video class="video" autoplay loop muted>
             <source src="./src/assets/video/yugi.mp4" type="video/mp4" />
